# neural-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: run-tests.yml
include/nn/: serialization.h  sgd.h  tensor.h
include/nn/data/: dataloader.h  datasets.h
include/nn/modules/: flatten.h  linear.h  loss.h  module.h  relu.h  softmax.h
models/: fashion-mnist.nn  mnist.nn
src/: main.cpp
src/nn/: serialization.cpp  sgd.cpp  tensor.cpp
src/nn/data/: dataloader.cpp  datasets.cpp
src/nn/modules/: flatten.cpp  linear.cpp  loss.cpp  modules.cpp  relu.cpp  softmax.cpp
tests/: tests.cpp
